adding news leter, ourpolicy and bestseller and style them

--- a/Enex-buticks/src/index.css
+++ b/Enex-buticks/src/index.css
@@ -8,9 +8,10 @@
 a.active hr{
     display: block;
 }
-/* body{
- overflow: hidden;
-} */
+body{
+ overflow-x: hidden;
+ 
+}
 
 *{
     font-family: Outfit;
@@ -27,3 +28,5 @@ a.active hr{
         color: white;
     }
 }
+
+
