--- a/Enex-Boutique/src/index.css
+++ b/Enex-Boutique/src/index.css
@@ -31,6 +31,10 @@ body{
   font-weight: 400;
   font-style: normal;
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
 @media (max-width:640px) {
     a.active:not(.logo){
         background-color: black;
